Finally bite the bullet and make use of jvmArgs for reflection.